--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
     <h1>Melissa Mosbrucker</h1>
-    <img src="../4.1+Webpages/4.1 Webpages/assets/images/GNAV9555.png" alt="Picture of Melissa" height="200">
+    <img src="./GNAV9555.png" alt="Picture of Melissa" height="200">
     </center>
     <hr size="4">
     <h2>Summary</h2>
